--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,6 +29,13 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <service
+            android:name=".UsageStatService"
+            android:exported="false"
+            android:foregroundServiceType="dataSync" />
     </application>
+
+
 
 </manifest>
